# chip8-emulator

./: CMakeLists.txt  LICENSE  README.md  main.cpp
